changed the body background color

--- a/src/app/AppComponent.html
+++ b/src/app/AppComponent.html
@@ -1,6 +1,6 @@
 <!-- Toolbar -->
 <div class="toolbar" role="banner">
-  <img width="40" alt="Cuddle Logo" src="../assets/images/logo1.png" />
+  <img width="40" alt="Cuddle Logo" src="assets/images/logo1.png" />
   <span style="margin-left: 50px;">Cuddle</span>
 </div>
 <div class="bg-image">
@@ -15,5 +15,4 @@
     </footer>
   </div>
 </div>
-
 <router-outlet></router-outlet>
